5/4 javafx dependencies