@@ -1,4 +1,4 @@
-/*
+/* 
  * This file was generated by the Gradle 'init' task.
  *
  * This generated file contains a sample Java application project to get you started.
@@ -8,8 +8,15 @@
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
-    // apply javaFx
+    // Apply the JavaFX plugin
     id 'org.openjfx.javafxplugin' version '0.0.10'
+    // Apply the Shadow plugin for creating a fat JAR
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
+}
+
+javafx {
+    version = "17"
+    modules = [ 'javafx.base', 'javafx.controls', 'javafx.fxml']
 }
 
 repositories {
@@ -18,49 +25,55 @@ repositories {
 }
 
 dependencies {
-    // Use JUnit Jupiter for testing.
-    testImplementation libs.junit.jupiter
-
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-
-    // This dependency is used by the application.
-    implementation libs.guava
+    implementation group: 'com.google.guava', name: 'guava', version: '32.1.2-jre'
+    implementation 'org.openjfx:javafx-base:17'
+    implementation 'org.openjfx:javafx-controls:17'
+    implementation 'org.openjfx:javafx-fxml:17'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 }
 
-// Apply a specific Java toolchain to ease working on different environments.
-java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(17)
-    }
+tasks.named('startShadowScripts').configure {
+    dependsOn jar
 }
 
-javafx {
-    version = "21"
-    modules = [ 'javafx.controls', 'javafx.fxml']
+tasks.named('distZip').configure {
+    dependsOn shadowJar
+}
+
+tasks.named('distTar').configure {
+    dependsOn shadowJar
+}
+
+tasks.named('startScripts').configure {
+    dependsOn shadowJar
 }
 
 application {
-    // Define the main class for the application.
     mainClass = 'SuperStore.App'
 }
 
-tasks.named('test') {
-    // Use JUnit Platform for unit tests.
-    useJUnitPlatform()
-}
+// java --module-path .\app\build\resources\main\javafx\lib\ --add-modules javafx.controls,javafx.fxml -jar .\app\build\libs\app.jar 
 
-
-tasks.jar {
-    destinationDirectory = file("$buildDir/")
-    archiveBaseName = 'SuperStore'
-    archiveVersion = '1.0.0-alpha'
-    from sourceSets.main.output
-    // Define the manifest for the JAR file.
+shadowJar {
+    archiveClassifier.set('')
+    mergeServiceFiles()
     manifest {
-        attributes(
-            'Implementation-Title': 'SuperStore.App',
-            'Implementation-Version': '1.0.0-alpha',
-            'Main-Class': 'com.SuperStore.MainClass'
-        )
+        attributes 'Main-Class': 'SuperStore.App'
     }
+    configurations = [project.configurations.runtimeClasspath]
+    include 'com/**'
+    include 'SuperStore/**'
+    include 'org/**'  
+    include 'javafx/**'  
+    include 'META-INF/**'
+    include '**/*.fxml'
+    include '**/*.properties'
+    include '**/*.css'
+    include '**/*.png'
+    include '**/*.jpg'
+    include '**/*.gif'
+    include '**/*.xml'
+    relocate 'javafx', 'myapp.shadow.javafx'
 }
+
